--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
   </head>
 
   <body>
+    <header>
+      <div class="container">
+        <h1>Propertybackbone</h1>
+        <h2>studying Backbone.js</h2>
+
+        
+        <section id="description">
+          <p>Creating application <a href="http://propertycross.com">http://propertycross.com</a> on Backbone.js by <a href="https://github.com/tastejs/PropertyCross/tree/master/specification">specification</a>.
+          </p>
+        </section>
+      </div>
+    </header>
+    <div id="application" class="container"></div>
+    <footer class="container">
+      <section id="downloads">
+          <a href="https://github.com/bi0morph/propertyBackbone/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/bi0morph/propertyBackbone/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/bi0morph/propertyBackbone" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>  
+    </footer>
     
   </body>
 </html>
