--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     <header>
       <div class="container">
         <h1>Propertybackbone</h1>
-        <h2>studying Backbone.js</h2>
+        <h2>studying Backbone.js <a href="https://github.com/bi0morph/propertyBackbone" class="btn btn-github"><span class="icon"></span>View on GitHub</a></h2>
 
         
         <section id="description">
-          <p>Creating application <a href="http://propertycross.com">http://propertycross.com</a> on Backbone.js by <a href="https://github.com/tastejs/PropertyCross/tree/master/specification">specification</a>.
+          <p>Creating application <a href="http://propertycross.com">http://propertycross.com</a> on Backbone.js by <a href="https://github.com/tastejs/PropertyCross/tree/master/specification">specification</a>. 
+
           </p>
         </section>
       </div>
     </header>
-    <div id="application" class="container"></div>
+    <div id="application" class="container"></div>    
   </body>
 </html>
