Include js libraties in index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Property Backbone by bi0morph</title>
   </head>
 
@@ -15,9 +13,11 @@
     <header>
       <div class="container">
         <h1>Propertybackbone</h1>
-        <h2>studying Backbone.js <a href="https://github.com/bi0morph/propertyBackbone" class="btn btn-github"><span class="icon"></span>View on GitHub</a></h2>
-
-        
+        <h2>studying Backbone.js
+          <a href="https://github.com/bi0morph/propertyBackbone" class="btn btn-github">
+            <span class="icon"></span>View on GitHub
+          </a>
+        </h2>        
         <section id="description">
           <p>Creating application <a href="http://propertycross.com">http://propertycross.com</a> on Backbone.js by <a href="https://github.com/tastejs/PropertyCross/tree/master/specification">specification</a>. 
 
@@ -25,6 +25,11 @@
         </section>
       </div>
     </header>
-    <div id="application" class="container"></div>    
+    <div id="application" class="container"></div>
+
+    <script type="text/javascript" src="/bower_components/underscore/underscore.js"></script>
+    <script type="text/javascript" src="/bower_components/backbone/backbone.js"></script>
+    <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="/javascript/main.js"></script>
   </body>
 </html>
