--- a/index.html
+++ b/index.html
@@ -25,11 +25,37 @@
         </section>
       </div>
     </header>
-    <div id="application" class="container"></div>
+    <div id="search-app" class="container"></div>
+    <script type="text/template" id="search-form-template">
+      <h3 class="text-center">
+        PropertyCross
+        <button class="btn pull-right">Faves</button>
+      </h3>
+      <div class="info-text">
+        Use the form below to search for houses to buy. You can search by place-name, postcode, or click 'My location', to search in your current location!
+      </div>
+      <div class="form-container form-inline">
+        <input type="text" class="form-control" value="" name="query" autofocus>
+        <button class="btn">Go</button>
+        <button class="btn">My location</button>
+      </div>
+      <div id="recent-searches">
+        <h4>Recent searches:</h4>
+        <ul class="list-wrap"></ul>
+      </div>
+      <div id="locations">
+        <h4>Please select a location below:</h4>
+        <ul class="list-wrap"></ul>
+      </div>
+    </script>
+    <script type="text/template" id="properties-list-template"></script>
+    <script type="text/template" id="property-detail-template"></script>
 
     <script type="text/javascript" src="/bower_components/underscore/underscore.js"></script>
-    <script type="text/javascript" src="/bower_components/backbone/backbone.js"></script>
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="/javascript/main.js"></script>
+    <script type="text/javascript" src="/bower_components/backbone/backbone.js"></script>
+    
+    <script type="text/javascript" src="/javascripts/views/app.js"></script>
+    <script type="text/javascript" src="/javascripts/app.js"></script>
   </body>
 </html>
