Add nestoria API

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script type="text/javascript" src="/bower_components/backbone/backbone.js"></script>
     
     <script type="text/javascript" src="/javascripts/views/app.js"></script>
+    <script type="text/javascript" src="/javascripts/nestoria-api.js"></script>
     <script type="text/javascript" src="/javascripts/app.js"></script>
   </body>
 </html>
