--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
+    
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <title>Property Backbone by bi0morph</title>
@@ -96,6 +96,7 @@
     <script type="text/javascript" src="/javascripts/views/propertiesList.js"></script>
 
     <script type="text/javascript" src="/javascripts/nestoria-api.js"></script>
+    <script type="text/javascript" src="/javascripts/searchService.js"></script>
     <script type="text/javascript" src="/javascripts/routers/router.js"></script>
     
     <script type="text/javascript" src="/javascripts/app.js"></script>
