--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    
+
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <title>Property Backbone by bi0morph</title>
@@ -43,7 +43,7 @@
         <h4>Recent searches:</h4>
         <ul class="list-wrap">
           <% _.each(recentSearches,function(search) { %>
-            <li><%= search.query %> (<%= search.qntResults %>)</li>
+            <li><a href="#/query/<%= search.query %>"><%= search.query %> (<%= search.qntResults %>)</a></li>
           <% });%>
         </ul>
       </div>
@@ -89,6 +89,8 @@
     <script type="text/javascript" src="/bower_components/backbone/backbone.js"></script>
     
     <script type="text/javascript" src="/javascripts/views/app.js"></script>
+    <script type="text/javascript" src="/javascripts/models/recentSearch.js"></script>
+    <script type="text/javascript" src="/javascripts/collections/listRecentSearches.js"></script>
     <script type="text/javascript" src="/javascripts/models/searchForm.js"></script>
     <script type="text/javascript" src="/javascripts/views/searchForm.js"></script>
 
