--- a/index.html
+++ b/index.html
@@ -68,15 +68,6 @@
         <%= properties.length %> of <%= total_results %> matches
       </h3>
       <ul class="list">
-        <% _.each(properties,function(property, index) { %>
-          <li>
-            <a href="#/properties/<%= index %>">
-              <img src="<%= property.thumb_url %>" align="left" class="img-thumbnail" width="<%= property.thumb_width %>" height="<%= property.thumb_height %>" alt="<%= property.title %>">
-              <%= property.price_formatted %><br>
-              <%= property.title %>
-            </a>
-          </li>
-        <% });%>
       </ul>
       <section class="<%= properties.length < total_results ? '' : 'hidden' %>">
         <button id="load-more" class="btn pull-right">Load more</button>
@@ -96,6 +87,13 @@
       </div>
       
     </script>
+    <script type="text/template" id="property-item-template">
+        <a href="#/properties/<%= index %>">
+          <img src="<%= image.src %>" align="left" class="img-thumbnail" width="<%= image.width %>" height="<%= image.height %>" alt="<%= title %>">
+          <%= price %><br>
+          <%= title %>
+        </a>
+    </script>
 
     <script type="text/javascript" src="/bower_components/underscore/underscore.js"></script>
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
@@ -108,7 +106,9 @@
     <script type="text/javascript" src="/javascripts/models/searchForm.js"></script>
     <script type="text/javascript" src="/javascripts/views/searchForm.js"></script>
 
+
     <script type="text/javascript" src="/javascripts/models/propertiesList.js"></script>
+    <script type="text/javascript" src="/javascripts/views/propertyItem.js"></script>
     <script type="text/javascript" src="/javascripts/views/propertiesList.js"></script>
 
     <script type="text/javascript" src="/javascripts/models/propertyDetail.js"></script>
